@@ -1,12 +1,14 @@
 //-----------------------------------------------------------------------------
 //
 // ImageLib Sources
-// Copyright (C) 2000-2002 by Denton Woods
-// Last modified: 05/21/2002 <--Y2K Compliant! =]
+// Copyright (C) 2000-2009 by Denton Woods
+// Last modified: 01/22/2009
 //
 // Filename: src-IL/src/il_pic.c
 //
 // Description: Softimage Pic (.pic) functions
+//	Lots of this code is taken from Paul Bourke's Softimage Pic code at
+//	http://local.wasp.uwa.edu.au/~pbourke/dataformats/softimagepic/
 //
 //-----------------------------------------------------------------------------
 
@@ -69,23 +71,15 @@ ILboolean ilIsValidPicL(const void *Lump, ILuint Size)
 // Internal function used to get the .pic header from the current file.
 ILboolean iGetPicHead(PIC_HEAD *Header)
 {
-	Header->Magic = GetLittleInt();
-
-	Header->Version = GetLittleFloat();
-
+	Header->Magic = GetBigInt();
+	Header->Version = GetBigFloat();
 	iread(Header->Comment, 1, 80);
-
 	iread(Header->Id, 1, 4);
-
-	Header->Width = GetLittleShort();
-
-	Header->Height = GetLittleShort();
-
-	Header->Ratio = GetLittleFloat();
-
-	Header->Fields = GetLittleShort();
-
-	Header->Padding = GetLittleShort();
+	Header->Width = GetBigShort();
+	Header->Height = GetBigShort();
+	Header->Ratio = GetBigFloat();
+	Header->Fields = GetBigShort();
+	Header->Padding = GetBigShort();
 
 	return IL_TRUE;
 }
@@ -183,11 +177,6 @@ ILboolean iLoadPicInternal()
 		return IL_FALSE;
 	}
 
-	if (!ilTexImage(Header.Width, Header.Height, 1, 1, 0, IL_UNSIGNED_BYTE, NULL)) {
-		return IL_FALSE;
-	}
-	iCurImage->Origin = IL_ORIGIN_LOWER_LEFT;
-
 	// Read channels
 	do {
 		if (Channel == NULL) {
@@ -225,10 +214,23 @@ ILboolean iLoadPicInternal()
 		
 	} while (Chained);
 
+	if (Alpha) {  // Has an alpha channel
+		if (!ilTexImage(Header.Width, Header.Height, 1, 4, IL_RGBA, IL_UNSIGNED_BYTE, NULL)) {
+			Read = IL_FALSE;
+			goto finish;  // Have to destroy Channels first.
+		}
+	}
+	else {  // No alpha channel
+		if (!ilTexImage(Header.Width, Header.Height, 1, 3, IL_RGBA, IL_UNSIGNED_BYTE, NULL)) {
+			Read = IL_FALSE;
+			goto finish;  // Have to destroy Channels first.
+		}
+	}
+	iCurImage->Origin = IL_ORIGIN_LOWER_LEFT;
+
 	Read = readScanlines((ILuint*)iCurImage->Data, Header.Width, Header.Height, Channel, Alpha);
 
 finish:
-
 	// Destroy channels
 	while (Channel) {
 		Prev = Channel;
@@ -255,7 +257,7 @@ ILboolean readScanlines(ILuint *image, ILint width, ILint height, CHANNEL *chann
 	for (i = height - 1; i >= 0; i--) {
 		scan = image + i * width;
 
-		if (!readScanline((ILubyte *)scan, width, channel, 4)) {
+		if (!readScanline((ILubyte *)scan, width, channel, alpha ? 4 : 3)) {
 			ilSetError(IL_ILLEGAL_FILE_VALUE);
 			return IL_FALSE;
 		}
@@ -263,6 +265,7 @@ ILboolean readScanlines(ILuint *image, ILint width, ILint height, CHANNEL *chann
 
 	return IL_TRUE;
 }
+
 
 ILuint readScanline(ILubyte *scan, ILint width, CHANNEL *channel, ILint bytes)
 {
@@ -272,7 +275,6 @@ ILuint readScanline(ILubyte *scan, ILint width, CHANNEL *channel, ILint bytes)
 
 	while (channel) {
 		noCol = 0;
-//#ifndef sgi
 		if(channel->Chan & PIC_RED_CHANNEL) {
 			off[noCol] = 0;
 			noCol++;
@@ -288,27 +290,13 @@ ILuint readScanline(ILubyte *scan, ILint width, CHANNEL *channel, ILint bytes)
 		if(channel->Chan & PIC_ALPHA_CHANNEL) {
 			off[noCol] = 3;
 			noCol++;
+			//@TODO: Find out if this is possible.
+			if (bytes == 3)  // Alpha channel in a 24-bit image.  Do not know what to do with this.
+				return 0;
 		}
-/*#else
-		if(channel->channels & PIC_RED_CHANNEL) {
-			off[noCol] = 3;
-			noCol++;
-		}
-		if(channel->channels & PIC_GREEN_CHANNEL) {
-			off[noCol] = 2;
-			noCol++;
-		}
-		if(channel->channels & PIC_BLUE_CHANNEL) {
-			off[noCol] = 1;
-			noCol++;
-		}
-		if(channel->channels & PIC_ALPHA_CHANNEL) {
-			off[noCol] = 0;
-			noCol++;
-		}
-#endif*/
 
-		switch(channel->Type & 0x0F) {
+		switch(channel->Type & 0x0F)
+		{
 			case PIC_UNCOMPRESSED:
 				status = channelReadRaw(scan, width, noCol, off, bytes);
 				break;
@@ -327,6 +315,7 @@ ILuint readScanline(ILubyte *scan, ILint width, CHANNEL *channel, ILint bytes)
 	return status;
 }
 
+
 ILboolean channelReadRaw(ILubyte *scan, ILint width, ILint noCol, ILint *off, ILint bytes)
 {
 	ILint i, j;
@@ -341,6 +330,7 @@ ILboolean channelReadRaw(ILubyte *scan, ILint width, ILint noCol, ILint *off, IL
 	}
 	return IL_TRUE;
 }
+
 
 ILboolean channelReadPure(ILubyte *scan, ILint width, ILint noCol, ILint *off, ILint bytes)
 {
@@ -371,6 +361,7 @@ ILboolean channelReadPure(ILubyte *scan, ILint width, ILint noCol, ILint *off, I
 	return IL_TRUE;
 }
 
+
 ILboolean channelReadMixed(ILubyte *scan, ILint width, ILint noCol, ILint *off, ILint bytes)
 {
 	ILint	count;
@@ -387,7 +378,7 @@ ILboolean channelReadMixed(ILubyte *scan, ILint width, ILint noCol, ILint *off, 
 
 		if (count >= 128) {  // Repeated sequence
 			if (count == 128) {  // Long run
-				count = GetLittleUShort();
+				count = GetBigUShort();
 				if (ieof())
 					return IL_FALSE;
 			}
